--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-theme: jekyll-theme-
-title: [ Le sujet du projet]
-description : [Ajouter une description]
-
+remote_theme: pages-themes/leap-day@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
